--- a/my_publication.bib
+++ b/my_publication.bib
@@ -1,4 +1,87 @@
 
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@ARTICLE{2016-kx,
+  title     = "Trivium 暗号回路に対するスキャンベース攻撃の実装評価 ({VLSI} 設計技術)",
+  author    = "{於久太祐} and {柳澤政生} and {戸川望}",
+  journal   = "電子情報通信学会技術研究報告= IEICE technical report: 信学技報",
+  publisher = "電子情報通信学会",
+  volume    =  116,
+  number    =  94,
+  pages     = "7--12",
+  year      =  2016
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@ARTICLE{2018-ms,
+  title     = "イジング計算機によるスロット配置問題の解法 (システム数理と応用)",
+  author    = "{金丸翔} and {於久太祐} and {多和田雅師} and {田中宗} and {林真人} and {山岡雅直} and
+               {柳澤政生} and {戸川望}",
+  journal   = "電子情報通信学会技術研究報告= IEICE technical report: 信学技報",
+  publisher = "電子情報通信学会",
+  volume    =  118,
+  number    =  85,
+  pages     = "161--166",
+  year      =  2018
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@TECHREPORT{2019-hs,
+  title       = "{SAベースのイジングマシンにより巡回セールスマン問題を高速解法するための多種軽量係数試行法}",
+  author      = "竹原, 康太 and 於久, 太祐 and 松田, 佳希 and 田中, 宗 and 戸川, 望",
+  institution = "早稲田大学基幹理工学部情報理工学科, 早稲田大学大学院基幹理工学研究科情報理工・情報通信専攻, 株式会社フィックスターズ,
+                 早稲田大学グリーン・コンピューティング・システム研究機構／科学技術振興機構さきがけ, 早稲田大学基幹理工学部情報理工学科",
+  month       =  mar,
+  year        =  2019
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@TECHREPORT{2018-rw,
+  title       = "{鍵長128ビット，192ビット，256ビットの軽量暗号CLEFIAに対するスキャンベース攻撃手法}",
+  author      = "於久, 太祐 and 多和田, 雅師 and 柳澤, 政生 and 戸川, 望",
+  institution = "早稲田大学大学院基幹理工学研究科情報理工・情報通信専攻, 早稲田大学大学院基幹理工学研究科情報理工・情報通信専攻,
+                 早稲田大学大学院基幹理工学研究科情報理工・情報通信専攻, 早稲田大学大学院基幹理工学研究科情報理工・情報通信専攻",
+  month       =  feb,
+  year        =  2018
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@INPROCEEDINGS{2017-ek,
+  title     = "{スキャンシグネチャを用いた周辺回路を含む軽量暗号CLEFIAに対するスキャンベース攻撃}",
+  booktitle = "{DAシンポジウム2017論文集}",
+  author    = "於久, 太祐 and 多和田, 雅師 and 柳澤, 政生 and 戸川, 望",
+  volume    =  2017,
+  pages     = "116--121",
+  month     =  aug,
+  year      =  2017
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@TECHREPORT{2017-sf,
+  title       = "{連続してハッシュ値を出力しないHMAC-SHA-256回路へのスキャンベース攻撃手法}",
+  author      = "於久, 太祐 and 柳澤, 政生 and 戸川, 望",
+  institution = "早稲田大学, 早稲田大学, 早稲田大学",
+  month       =  mar,
+  year        =  2017
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@INPROCEEDINGS{2016-gf,
+  title     = "{スキャンシグネチャを用いたスキャンデータ解析に基づくHMAC-SHA-256ハッシュ回路のスキャンベース攻撃}",
+  booktitle = "{DAシンポジウム2016論文集}",
+  author    = "於久, 太祐 and 多和田, 雅師 and 柳澤, 政生 and 戸川, 望",
+  volume    =  2016,
+  pages     = "2--7",
+  month     =  sep,
+  year      =  2016
+}
+
 @INPROCEEDINGS{Takehara2019-ih,
   title     = "A Multiple Coefficients Trial Method to Solve Combinatorial
                Optimization Problems for Simulated-annealing-based Ising
