--- a/my_publication.bib
+++ b/my_publication.bib
@@ -82,6 +82,17 @@
   year      =  2016
 }
 
+@ARTICLE{2020-as,
+  author={Oku, Daisuke and Tawada, Masashi and Tanaka, Shu and Togawa, Nozomu},
+  journal={IEEE Transactions on Computers}, 
+  title={How to Reduce the Bit-width of an Ising Model by Adding Auxiliary Spins}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={1-1},
+  doi={10.1109/TC.2020.3045112}
+}
+
 @INPROCEEDINGS{Takehara2019-ih,
   title     = "A Multiple Coefficients Trial Method to Solve Combinatorial
                Optimization Problems for Simulated-annealing-based Ising
